package org.example.modelo.disparo;

public enum Equipo { JUGADOR, ENEMIGO }
